# Advent-of-Code

./: .gitignore  README.md  pyproject.toml
2020/Untitled Folder/: Untitled.ipynb
2021/day-1/: day_1.py
2021/day-2/: Untitled.ipynb
2022/day-1/: day_1.py
2022/day-2/: day_2.py
advent-of-code-2021/day-1/: day_1.ipynb
advent-of-code-2021/day-2/: day-2-A.py  day-2-B.py
day-1/: day_1.py  day_2.py
day-2/: day_2_a.py  day_2_b.py  passwords.csv
