[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "environment for the advent of code solutions"
authors = ["Ioannis Vasilopoulos <ioannis.vasilopoulos@siemens.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
